# Analytics-Foundry

./: .coverage  .cursorrules  AGENTS.md  DEPLOYMENT.md  PLAN.md  README.md  TECH_SPEC.md  pyproject.toml
sql/: README.md
sql/bronze/: nfl_sleeper_players.sql
sql/gold/: available_players.sql
sql/silver/: players.sql
src/analytics_foundry/: __init__.py  admin_routes.py  api.py  config.py  exceptions.py  health.py  leagues_store.py  lineage.py  logging_config.py  quality.py  rbac.py  sql_loader.py  telemetry.py
src/analytics_foundry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/analytics_foundry/adapters/: __init__.py  mock_fixture.py  nfl_sleeper.py  protocol.py  registry.py  sleeper_client.py  stub.py
src/analytics_foundry/admin_ui/: index.html
src/analytics_foundry/bronze/: __init__.py  store.py
src/analytics_foundry/gold/: __init__.py  injury.py  league.py  players.py  recommendations.py
src/analytics_foundry/silver/: __init__.py  injuries.py  league.py  players.py  rosters.py
tests/: __init__.py  conftest.py  test_adapters.py  test_admin.py  test_api_contract.py  test_bronze_persistence.py  test_bronze_replace.py  test_health.py  test_medallion_layout.py  test_nfl_sleeper_adapter.py  test_placeholder.py  test_rbac.py  test_recommendations.py  test_second_adapter.py  test_silver.py  test_sleeper_client.py  test_sql_artifacts.py  test_tenant_path.py
