[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-foundry"
version = "0.1.0"
description = "Generalized backend data science workbench (medallion architecture, sleeper-stream-scribe compatible API)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["-v", "--tb=short"]
testpaths = ["tests"]
pythonpath = ["src"]
